--- a/blog-post-client/package.json
+++ b/blog-post-client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@tanstack/react-table": "^8.17.3",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
@@ -19,6 +20,7 @@
     "framer-motion": "^11.1.9",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "mui-datatables": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
