--- a/blog-post-client/package.json
+++ b/blog-post-client/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.11.1",
     "framer-motion": "^11.1.9",
+    "ka-table": "^9.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "mui-datatables": "^4.3.0",
